@@ -38,3 +38,4 @@ Christopher Zentgraf @TheZenti <git@the-zenti.de>
 Lorenzo L. Ancora @LorenzoAncora <admin@lorenzoancora.info>
 Ben Dauphinee @bendauphinee <me@bendauphinee.com>
 Benjamin Dowson @lattlay <bdowson7@gmail.com>
+Stuart Johnston @mechanarchy
