@@ -15,6 +15,8 @@ Fixes:
 * Fix setting a relationship without selecting any birthdate option
 * Fix several typos in English language files
 * Fix Journal view now includes Activities as intended
+* Fix deleting a LifeEvent no longer deletes the associated Contact
+
 
 RELEASED VERSIONS:
 
